--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
+
 /* General Styles */
 
 
 *{
+  font-family: "Scheherazade New", serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -10,6 +12,7 @@
   border: none;
   scroll-behavior: smooth; 
 }
+
 
 html{
   font-size: 62.5%; /* 1rem*/
@@ -44,7 +47,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 2rem 9%;
+  padding: 1rem 3%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -53,6 +56,9 @@ header {
 }
 
 .logo{
+  font-family: "Cormorant Garamond" , serif;
+  font-weight: bold;
+  font-style: italic;
   font-size: 3.5rem;
   color: var(--button-color);
   font-weight: 600;
@@ -69,9 +75,59 @@ header {
 
 .navbar a:hover,
 .navbar a.active{
-  color: var(--button-color);
+  color: var(--secondary-color);
 
 }
+
+/* New CSS for responsive menu */
+.menu-icon {
+  display: none; /* Hide the hamburger menu by default */
+  font-size: 3rem; /* Match the size of your design */
+  color: var(--button-color); /* Match the color of your design */
+  cursor: pointer;
+
+}
+
+.menu-toggle {
+  display: none; /* Hide the checkbox */
+}
+
+/* Responsive design: Show hamburger menu and hide links on small screens */
+@media (max-width: 768px) {
+  .menu-icon {
+    display: block; /* Show the hamburger menu */
+    
+  }
+
+  .navbar {
+    display: none; /* Hide the regular links by default */
+    flex-direction: column; /* Stack links vertically */
+    position: absolute;
+    top: 100%; /* Position below the header */
+    left: 0;
+    width: 100%;
+    background-color: var(--essential-color); /* Match header background */
+    padding: 2rem 9%; /* Match header padding */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add shadow for better visibility */
+  }
+
+  .navbar a {
+    margin-left: 0; /* Remove left margin for stacked links */
+    margin-bottom: 1.5rem; /* Add spacing between stacked links */
+  }
+
+  /* Show the navigation links when the checkbox is checked */
+  .menu-toggle:checked ~ .navbar {
+    display: flex;
+  }
+}
+
+
+
+
+
+
+
 
 
 
@@ -98,6 +154,8 @@ header {
 .home-content p{
   margin-top: 1em ;
   font-size: 2rem;
+  word-spacing: 2px;
+  letter-spacing: 2px;
 }
 
 .btn{
@@ -169,6 +227,7 @@ header {
   margin: 30px 0;
 
 }
+
 
 .input-box label{
   position: absolute;
@@ -374,9 +433,9 @@ footer .social-links a:hover {
   content: '';
   position: absolute;
   width: 500px;
-  background: var(--button-color);
+  background-image: linear-gradient(90deg , var(--font-color) , var(--essential-color));
   height: 100px;
-  animation: animate 5s linear infinite;
+  animation: animate 7s linear infinite;
   transition: all .2s linear;
  }
 
@@ -435,6 +494,7 @@ footer .social-links a:hover {
 
 
 /* Resource Pages */
+
 
 .content-container{
   
@@ -547,7 +607,7 @@ input, textarea, select {
 }
 
 .grades-table th {
-  background-color: #3498db;
+  background-color: var(--button-color);
   color: white;
 }
 
